--- a/index.html
+++ b/index.html
@@ -12,31 +12,81 @@
             <!--STATS PANE-->
             <div class="stats">
                 <H3><u>Stats</u></H3>
-                <div class="containerSmFlex">
+                <div class="pad util-buttons">
+                    <button class="util-button" onclick="save()">
+                        Save
+                    </button>
+                    <button class="util-button" onclick="load()">
+                        Load
+                    </button>
+                </div>
+                <div class="pad containerSmFlex">
                     <strong>Sessions Logged: </strong><span class="statSesh">0</span><br>
                     <strong>Brain Time: </strong><span class="statMins">0</span> minutes
                 </div>
-                <div class="stats-Container">
+                <div class="pad stats-Container">
                     <p><u>Energy</u></p>
-                    <div class="containerSmFlex">
-                        <strong>Beta Power: </strong> (<span class="kJpsBeta rate">0.0</span>/s)<br>
-                        <span class ="destBeta"><img src="./assets/BetaBolt.png" alt="Beta" class="statsIcons"></span><span class="powerBeta">0.0</span> kJ
+                    <div class="pad containerSmFlex">
+                        <strong>Beta Power: </strong> (<span class="kJpsBeta rate">0</span>/s)<br>
+                        <span class ="destBeta"><img src="./assets/BetaBolt.png" alt="Beta" class="statsIcons"></span><span class="powerBeta">0</span> kJ
+                        <div class="statBatCap">Capacity: <span class="batCapBeta">100</span> kJ - <span class="batCapPercentBeta">0</span> %
+                            <div class="battery Beta">
+                                <div class="batCapIndicatorLight Beta"></div>
+                                <div class="batCapIndicatorLight Beta"></div>
+                                <div class="batCapIndicatorLight Beta"></div>
+                                <div class="batCapIndicatorLight Beta"></div>
+                                <div class="batCapIndicatorLight Beta"></div>
+                                <div class="batCapIndicatorLight Beta"></div>
+                                <div class="batCapIndicatorLight Beta"></div>
+                                <div class="batCapIndicatorLight Beta"></div>
+                                <div class="batCapIndicatorLight Beta"></div>
+                                <div class="batCapIndicatorLight Beta"></div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="containerSmFlex">                        
-                        <strong>Alpha Power: </strong> (<span class="kJpsAlpha rate">0.0</span>/s)<br>
-                        <span class ="destAlpha"><img src="./assets/AlphaBolt.png" alt="Alpha" class="statsIcons"></span><span class="powerAlpha">0.0</span> kJ
+                    <div class="pad containerSmFlex">                        
+                        <strong>Alpha Power: </strong> (<span class="kJpsAlpha rate">0</span>/s)<br>
+                        <span class ="destAlpha"><img src="./assets/AlphaBolt.png" alt="Alpha" class="statsIcons"></span><span class="powerAlpha">0</span> kJ
+                        <div class="statBatCap">Capacity: <span class="batCapAlpha">100</span> kJ - <span class="batCapPercentAlpha">0</span> %
+                            <div class="battery Alpha">
+                                <div class="batCapIndicatorLight Alpha"></div>
+                                <div class="batCapIndicatorLight Alpha"></div>
+                                <div class="batCapIndicatorLight Alpha"></div>
+                                <div class="batCapIndicatorLight Alpha"></div>
+                                <div class="batCapIndicatorLight Alpha"></div>
+                                <div class="batCapIndicatorLight Alpha"></div>
+                                <div class="batCapIndicatorLight Alpha"></div>
+                                <div class="batCapIndicatorLight Alpha"></div>
+                                <div class="batCapIndicatorLight Alpha"></div>
+                                <div class="batCapIndicatorLight Alpha"></div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="containerSmFlex">
-                        <strong>Theta Power: </strong> (<span class="kJpsTheta rate">0.0</span>/s)<br>
-                        <span class ="destTheta"><img src="./assets/ThetaBolt.png" alt="Theta" class="statsIcons"></span><span class="powerTheta">0.0</span> kJ
+                    <div class="pad containerSmFlex">
+                        <strong>Theta Power: </strong> (<span class="kJpsTheta rate">0</span>/s)<br>
+                        <span class ="destTheta"><img src="./assets/ThetaBolt.png" alt="Theta" class="statsIcons"></span><span class="powerTheta">0</span> kJ
+                        <div class="statBatCap">Capacity: <span class="batCapTheta">100</span> kJ - <span class="batCapPercentTheta">0</span> %
+                            <div class="battery Theta">
+                                <div class="batCapIndicatorLight Theta"></div>
+                                <div class="batCapIndicatorLight Theta"></div>
+                                <div class="batCapIndicatorLight Theta"></div>
+                                <div class="batCapIndicatorLight Theta"></div>
+                                <div class="batCapIndicatorLight Theta"></div>
+                                <div class="batCapIndicatorLight Theta"></div>
+                                <div class="batCapIndicatorLight Theta"></div>
+                                <div class="batCapIndicatorLight Theta"></div>
+                                <div class="batCapIndicatorLight Theta"></div>
+                                <div class="batCapIndicatorLight Theta"></div>
+                            </div>
+                        </div>
                     </div>
                     <button class="util-button" onclick="logSession()">
                         Debug +Energy
                     </button>
                 </div>
-                <div class="stats-Container">
+                <div class="pad stats-Container">
                     <p><u>Mint</u></p>
-                    <div class="mintAction">
+                    <div class="pad mintAction">
                         <span class="mintNums"><span class="mintNumBeta">1</span>x </span>
                         <img src="./assets/BetaWave.png" alt="Beta" class="statsIcons">
                         <label class="switch">
@@ -45,7 +95,7 @@
                         </label>
                         <img src="./assets/BetaCoin.png" alt="Beta" class="statsIcons">
                     </div>
-                    <div class="mintAction">
+                    <div class="pad mintAction">
                         <span class="mintNums"><span class="mintNumAlpha">1</span>x </span>
                         <img src="./assets/AlphaWave.png" alt="Alpha" class="statsIcons">
                         <label class="switch">
@@ -54,7 +104,7 @@
                         </label>
                         <img src="./assets/AlphaCoin.png" alt="Alpha" class="statsIcons">
                     </div>
-                    <div class="mintAction">
+                    <div class="pad mintAction">
                         <span class="mintNums"><span class="mintNumTheta">1</span>x </span>
                         <img src="./assets/ThetaWave.png" alt="Theta" class="statsIcons">
                         <label class="switch">
@@ -64,28 +114,20 @@
                         <img src="./assets/ThetaCoin.png" alt="Theta" class="statsIcons">
                     </div>
                 </div>
-                <div class="stats-Container">
+                <div class="pad stats-Container">
                     <p><u>Coins</u></p>
-                    <div class="containerSmFlex">
+                    <div class="pad containerSmFlex">
                         <strong>Beta Coins: </strong> (<span class="coinspsBeta rate">0.0</span>/s)<br>
                         <img src="./assets/BetaCoin.png" alt="Beta" class="statsIcons"> <span class="coinsBeta">17000</span>
                     </div>
-                    <div class="containerSmFlex">                        
+                    <div class="pad containerSmFlex">                        
                         <strong>Alpha Coins: </strong> (<span class="coinspsAlpha rate">0.0</span>/s)<br>
                         <img src="./assets/AlphaCoin.png" alt="Alpha" class="statsIcons"> <span class="coinsAlpha">7000</span>
                     </div>
-                    <div class="containerSmFlex">
+                    <div class="pad containerSmFlex">
                         <strong>Theta Coins: </strong> (<span class="coinspsTheta rate">0.0</span>/s)<br>
                         <img src="./assets/ThetaCoin.png" alt="Theta" class="statsIcons"> <span class="coinsTheta">7000</span>
                     </div>
-                </div>
-                <div class="util-buttons">
-                    <button class="util-button" onclick="save()">
-                        Save
-                    </button>
-                    <button class="util-button" onclick="load()">
-                        Load
-                    </button>
                 </div>
             </div>
             <!--HOMESTEAD PANE-->
@@ -96,12 +138,12 @@
                         <h5>Manual Labor: create a tiny amount of energy by turning this crank!</h5>
                         <img src="./assets/crank.png" class="crank" id="crankbutton" onclick="rotateCrank()">
                         <div class="crankIndicator">
-                            <div class="indicatorLight"></div>
-                            <div class="indicatorLight"></div>
-                            <div class="indicatorLight"></div>
-                            <div class="indicatorLight"></div>
-                            <div class="indicatorLight"></div>
-                            <div class="indicatorLight"></div>
+                            <div class="crankIndicatorLight"></div>
+                            <div class="crankIndicatorLight"></div>
+                            <div class="crankIndicatorLight"></div>
+                            <div class="crankIndicatorLight"></div>
+                            <div class="crankIndicatorLight"></div>
+                            <div class="crankIndicatorLight"></div>
                         </div>
                     </div>
                     <div class="TreeButtonContainer">
