Testing New Tree Leaf Thing

--- a/index.html
+++ b/index.html
@@ -80,9 +80,6 @@
                             </div>
                         </div>
                     </div>
-                    <button class="util-button" onclick="logSession()">
-                        Debug +Energy
-                    </button>
                 </div>
                 <div class="pad stats-Container">
                     <p><u>Mint</u></p>
@@ -152,6 +149,12 @@
                             <h5>Click to convert a Session's Brainpower to Energy</h5>
                         </div>
                     </div>
+<!--TESTING TREE-->
+                    <div class="TreeButtonContainer">
+                        <div id="TreeButton2" class="TreeButton2" onclick="testTree(event)">
+                            <img src="./assets/TreeButton2.png" alt="Synthesize" class="TreeIcon" draggable="false">
+                        </div>
+                    </div>
                     <div class="gardens">
                         <div id="leafGardenBeta" class="leafGarden"></div>
                         <div id="leafGardenAlpha" class="leafGarden"></div>
@@ -159,6 +162,7 @@
                     </div>   
                 </div>
             </div>
+            <!--BUILDING ASSETS AND UPGRADES-->
             <div class="right">
                 <!--UPGRADES BUILDING-->
                 <div class="buildings">
@@ -254,7 +258,7 @@
                         </div>
                     </div>
                 </div>
-                
+                <!--BUILDING ASSETS ON DISPLAY-->
                 <div class="theGrid" id="theGrid">
                     <div class="buildHov"><img  src="./assets/building-1House.png"><span class="buildTooltip">House</span></div>
                     <div class="buildHov"><img  src="./assets/building-BetaBattery.png"><span class="buildTooltip">Battery</span></div>
