--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section>
-        <div class="main">
+        <div id="main" class="main">
             <!--STATS PANE-->
             <div class="stats">
                 <H3><u>Stats</u></H3>
@@ -18,6 +18,9 @@
                     </button>
                     <button class="util-button" onclick="load()">
                         Load
+                    </button>
+                    <button class="util-button del" onclick="reset()">
+                        Delete File
                     </button>
                 </div>
                 <div class="pad containerSmFlex">
@@ -144,22 +147,15 @@
                         </div>
                     </div>
                     <div class="TreeButtonContainer">
-                        <div class="TreeButton" onclick="logSessionFile(event)">
-                            <img src="./assets/TreeButton.png" alt="Synthesize" class="TreeIcon" draggable="false">
+                        <div id="TreeButton" class="TreeButton" onclick="logSessionFile(event)">
+                            <img src="./assets/TreeButtonEmpty.png" alt="Synthesize" class="TreeIcon" draggable="false">
+                            <p style="font-size:.8em">You have <span class="seshLen" style="font-size:1.2em; color:darkgreen; font-weight:500">0</span> sessions left to process</p>
                             <h5>Click to convert a Session's Brainpower to Energy</h5>
                         </div>
                     </div>
-<!--TESTING TREE-->
-                    <div class="TreeButtonContainer">
-                        <div id="TreeButton2" class="TreeButton2" onclick="testTree(event)">
-                            <img src="./assets/TreeButton2.png" alt="Synthesize" class="TreeIcon" draggable="false">
-                        </div>
+                    <div class="console">
+                        <span class="loading">Loading...</span>
                     </div>
-                    <div class="gardens">
-                        <div id="leafGardenBeta" class="leafGarden"></div>
-                        <div id="leafGardenAlpha" class="leafGarden"></div>
-                        <div id="leafGardenTheta" class="leafGarden"></div>
-                    </div>   
                 </div>
             </div>
             <!--BUILDING ASSETS AND UPGRADES-->
@@ -170,7 +166,7 @@
                     <!--TREE UPGRADES-->
                     <div class="treeUpgradeBin">
                         <h3>Tree Upgrades</h3>
-                        <p>Add leaves to your tree to get more out of each session! Each Leaf gives +2% more energy</p>
+                        <p>Add leaves to your tree to get more out of each session! Each upgrade grows 2 Leaves (and gets you+2% more energy!)</p>
                         <div class="treeUpgrades">
                             <div class="leaf" onclick="buyBetaLeaf()">
                                 <h5>Current Boost: + <span class="boostBetaVal">0</span>%</h5>
