--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="header">
+
+    </section>
+    <section class ="menu">
+        <h1>Hello World</h1>
+        <button class="util-button" onclick="dispGame()">Start</button>
+        <button class="util-button" onclick="dispGame()">
+            Load
+        </button>
+    </section>
+    <section class="game"> <!--MAIN GAME WINDOWS-->
         <div id="main" class="main">
             <!--STATS PANE-->
-            <div class="stats">
+            
+            <div class="holdForStats"><div class="stats">
                 <H3><u>Stats</u></H3>
                 <div class="pad util-buttons">
                     <button class="util-button" onclick="save()">
@@ -129,32 +140,36 @@
                         <img src="./assets/ThetaCoin.png" alt="Theta" class="statsIcons"> <span class="coinsTheta">7000</span>
                     </div>
                 </div>
-            </div>
+            </div></div>
             <!--HOMESTEAD PANE-->
             <div class="homestead">
-                <div class="TreeGrow">
-                    <H3><u>Homestead</u></H3>
-                    <div class="laborBin">
-                        <h5>Manual Labor: create a tiny amount of energy by turning this crank!</h5>
-                        <img src="./assets/crank.png" class="crank" id="crankbutton" onclick="rotateCrank()">
-                        <div class="crankIndicator">
-                            <div class="crankIndicatorLight"></div>
-                            <div class="crankIndicatorLight"></div>
-                            <div class="crankIndicatorLight"></div>
-                            <div class="crankIndicatorLight"></div>
-                            <div class="crankIndicatorLight"></div>
-                            <div class="crankIndicatorLight"></div>
+                <H3><u>Homestead</u></H3>
+                <div class="laborBin">
+                    <h5>Manual Labor: create a tiny amount of energy by turning this crank!</h5>
+                    <img src="./assets/crank.png" class="crank" id="crankbutton" onclick="rotateCrank(event)">
+                    <div class="crankIndicator">
+                        <div class="crankIndicatorLight"></div>
+                        <div class="crankIndicatorLight"></div>
+                        <div class="crankIndicatorLight"></div>
+                        <div class="crankIndicatorLight"></div>
+                        <div class="crankIndicatorLight"></div>
+                        <div class="crankIndicatorLight"></div>
+                    </div>
+                </div>
+                <div class="treeButtonContainer tooltipHover" onmouseover="nextSeshInfo()">
+                    <div id="treeButton" class="treeButton" onclick="logSessionFile(event), nextSeshInfo()">
+                        <img src="./assets/treeButtonEmpty.png" alt="Synthesize" class="treeIcon" draggable="false">
+                        <p style="font-size:.8em">You have <span class="seshLen" style="font-size:1.2em; color:darkgreen; font-weight:500">0</span> sessions left to process</p>
+                        <h5>Click to convert a Session's Brainpower to Energy</h5>
+                    </div>
+                    <div class="buildTooltip">
+                        <div class="treeTip">
+                            <div class="nextSeshInfo">If you see this, something's broke</div>
+                            <div class="nextSeshWaste">Waste</div>
                         </div>
                     </div>
-                    <div class="TreeButtonContainer">
-                        <div id="TreeButton" class="TreeButton" onclick="logSessionFile(event)">
-                            <img src="./assets/TreeButtonEmpty.png" alt="Synthesize" class="TreeIcon" draggable="false">
-                            <p style="font-size:.8em">You have <span class="seshLen" style="font-size:1.2em; color:darkgreen; font-weight:500">0</span> sessions left to process</p>
-                            <h5>Click to convert a Session's Brainpower to Energy</h5>
-                        </div>
-                    </div>
-                    <div class="console">
-                    </div>
+                </div>
+                <div class="console">
                 </div>
             </div>
             <!--BUILDING ASSETS AND UPGRADES-->
@@ -167,26 +182,29 @@
                         <h3>Tree Upgrades</h3>
                         <p>Add leaves to your tree to get more out of each session! Each upgrade grows 2 Leaves (and gets you+2% more energy!)</p>
                         <div class="treeUpgrades">
-                            <div class="leaf" onclick="buyBetaLeaf()">
-                                <h5>Current Boost: + <span class="boostBetaVal">0</span>%</h5>
+                            <div class="leaf Beta upgradeHov" onclick="buyBetaLeaf()" onmouseover="upgradeInfo('leaf','Beta')">
+                                <h5>Click for +2% Beta Power</h5>
                                 <div>
                                     <img src="./assets/BetaLeaf.png" alt="Beta" class="leafIcons" draggable="false">
                                 </div>
                                 <h5>Cost: <img src="./assets/BetaBolt.png" alt="Beta" class="statsIcons"><span class="costLeafBeta">5</span></h5>
+                                <span class="upgradeTooltip">Hello World</span>
                             </div>
-                            <div class="leaf" onclick="buyAlphaLeaf()">
-                                <h5>Current Boost: + <span class="boostAlphaVal">0</span>%</h5>
+                            <div class="leaf Alpha upgradeHov" onclick="buyAlphaLeaf()" onmouseover="upgradeInfo('leaf','Alpha')">
+                                <h5>Click for +2% Alpha Power</h5>
                                 <div>
                                     <img src="./assets/AlphaLeaf.png" alt="Alpha" class="leafIcons" draggable="false">
                                 </div>
                                 <h5>Cost: <img src="./assets/AlphaBolt.png" alt="Alpha" class="statsIcons"><span class="costLeafAlpha">5</span></h5>
+                                <span class="upgradeTooltip">Hello World</span>
                             </div>
-                            <div class="leaf" onclick="buyThetaLeaf()">
-                                <h5>Current Boost: + <span class="boostThetaVal">0</span>%</h5>
+                            <div class="leaf Theta upgradeHov" onclick="buyThetaLeaf()" onmouseover="upgradeInfo('leaf','Theta')">
+                                <h5>Click for +2% Theta Power</h5>
                                 <div>
                                     <img src="./assets/ThetaLeaf.png" alt="Theta" class="leafIcons" draggable="false">
                                 </div>
                                 <h5>Cost: <img src="./assets/ThetaBolt.png" alt="Theta" class="statsIcons"><span class="costLeafTheta">5</span></h5>
+                                <span class="upgradeTooltip">Hello World</span>
                             </div>
                         </div>
                     </div>
@@ -255,13 +273,13 @@
                 </div>
                 <!--BUILDING ASSETS ON DISPLAY-->
                 <div class="theGrid" id="theGrid">
-                    <div class="buildHov"><img  src="./assets/building-1House.png"><span class="buildTooltip">House</span></div>
-                    <div class="buildHov"><img  src="./assets/building-BetaBattery.png"><span class="buildTooltip">Battery</span></div>
-                    <div class="buildHov"><img  src="./assets/building-AlphaMint.png"><span class="buildTooltip">Mint</span></div>
-                    <div class="buildHov"><img  src="./assets/building-BetaMint.png"><span class="buildTooltip">Mint</span></div>
-                    <div class="buildHov"><img  src="./assets/building-AlphaBattery.png"><span class="buildTooltip">Battery</span></div>
-                    <div class="buildHov"><img  src="./assets/building-ThetaBattery.png"><span class="buildTooltip">Battery</span></div>
-                    <div class="buildHov"><img  src="./assets/building-ThetaMint.png"><span class="buildTooltip">Mint</span></div>
+                    <div class="buildHov tooltipHover"><img  src="./assets/building-1House.png"><span class="buildTooltip">House</span></div>
+                    <div class="buildHov tooltipHover"><img  src="./assets/building-BetaBattery.png"><span class="buildTooltip">Battery</span></div>
+                    <div class="buildHov tooltipHover"><img  src="./assets/building-AlphaMint.png"><span class="buildTooltip">Mint</span></div>
+                    <div class="buildHov tooltipHover"><img  src="./assets/building-BetaMint.png"><span class="buildTooltip">Mint</span></div>
+                    <div class="buildHov tooltipHover"><img  src="./assets/building-AlphaBattery.png"><span class="buildTooltip">Battery</span></div>
+                    <div class="buildHov tooltipHover"><img  src="./assets/building-ThetaBattery.png"><span class="buildTooltip">Battery</span></div>
+                    <div class="buildHov tooltipHover"><img  src="./assets/building-ThetaMint.png"><span class="buildTooltip">Mint</span></div>
                     
                 </div>
             </div> 
